GP-MAIN-ALL-PVC-SVC/routes/01-ers-prod-nginx-gw-vs-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
  name: prod-route-ingress
  namespace: ers-prod
spec:
  host: prod-nginx.apps.pocpbm-nexp.grameenphone.com
  port:
    targetPort: http-nginx
  tls:
    insecureEdgeTerminationPolicy: Redirect    
    certificate: "-----BEGIN CERTIFICATE-----\r\nMIIF2TCCBMGgAwIBAgITfAAASOyM86pWBYIKDwAEAABI7DANBgkqhkiG9w0BAQsF\r\nADBPMRMwEQYKCZImiZPyLGQBGRYDY29tMRwwGgYKCZImiZPyLGQBGRYMZ3JhbWVl\r\nbnBob25lMRowGAYDVQQDExFEQUNBLWludGVybWVkaWF0ZTAeFw0yMTExMDMwOTU2\r\nMDBaFw0yMzExMDMwOTU2MDBaMIGRMQswCQYDVQQGEwJCRDEOMAwGA1UECBMFQm9n\r\ncmExCzAJBgNVBAcTAkdQMQ0wCwYDVQQKEwRHUElUMSwwKgYDVQQDDCMqLmFwcHMu\r\ncG9jcGJtLW5leHAuZ3JhbWVlbnBob25lLmNvbTEoMCYGCSqGSIb3DQEJARYZbWRz\r\naGFmaXFAZ3JhbWVlbnBob25lLmNvbTCCASIwDQYJKoZ [...]
      CERTIFICATE-----\r\n-----BEGIN CERTIFICATE-----\r\nMIIFdzCCBF+gAwIBAgITNQAABw6z7+7emFS/DwACAAAHDjANBgkqhkiG9w0BAQsF\r\nADBCMRMwEQYKCZImiZPyLGQBGRYDY29tMRwwGgYKCZImiZPyLGQBGRYMZ3JhbWVl\r\nbnBob25lMQ0wCwYDVQQDEwREQUNBMB4XDTIxMDUxOTA1Mjg0OFoXDTMxMDUxNzA1\r\nMjg0OFowTzETMBEGCgmSJomT8ixkARkWA2NvbTEcMBoGCgmSJomT8ixkARkWDGdy\r\nYW1lZW5waG9uZTEaMBgGA1UEAxMRREFDQS1pbnRlcm1lZGlhdGUwggEiMA0GCSqG\r\nSIb3DQEBAQUAA4IBDwAwggEKAoIBAQDzE/l8DdOqkwilXyXISiRo5f0ktht0e2WP\r\n7i0w/vXoQI6vO8S++VQi1dMI2qN2tHPpknN [...]
      CERTIFICATE-----\r\n-----BEGIN CERTIFICATE-----\r\nMIIDmzCCAoOgAwIBAgIQXNcZWDFpeKhNb0TeMrM1nzANBgkqhkiG9w0BAQsFADBC\r\nMRMwEQYKCZImiZPyLGQBGRYDY29tMRwwGgYKCZImiZPyLGQBGRYMZ3JhbWVlbnBo\r\nb25lMQ0wCwYDVQQDEwREQUNBMCAXDTIwMDYwMTE0MDAzN1oYDzIwNzEwNTE4MTMz\r\nNTUzWjBCMRMwEQYKCZImiZPyLGQBGRYDY29tMRwwGgYKCZImiZPyLGQBGRYMZ3Jh\r\nbWVlbnBob25lMQ0wCwYDVQQDEwREQUNBMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8A\r\nMIIBCgKCAQEAmkwnkBeIHXqRJ+Kg+5xy0ACX35U0HbKZJ7Ula74SzfyoJ7+HN6dY\r\nLFBwQhljOedbD1/tcBg0SISl93O/83Y0DGM [...]
      CERTIFICATE-----\r\n"
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQCrGEq9l3GnYDkT
[...]
      Yyxp1wirG+cUGb/RHT52d2Xh
      -----END PRIVATE KEY-----
    termination: edge
  to:
    kind: ""
    name: nginx-service
    weight: null
status: {}
